# aa-caller-rust

./: Cargo.toml  README.md
aa-caller/: Cargo.toml  build.rs
aa-caller/examples/: client-logs.rs  client.rs  cmd.rs
aa-caller/resources/: request.proto
aa-caller/src/: caller.rs  command.rs  common.rs  main.rs  server.rs
aa-caller/src/protos/: profile.proto  request.proto
postinstall/: Cargo.toml  build.rs
postinstall/resources/: pkexec.policy.in
