[package]
name = "aa-caller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive", "cargo"] }
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["full"] }

[build-dependencies]
prost-build = "0.12.3"
